# LearningLangChain

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  main.py  prompt.py
src/indexer/: index_pdfs.py
